public/stylesheets/style.css
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
@import "vendor/LineIcons.min.css";
@import "vendor/bootstrap.min.css";
@import "vendor/fontawesome.min.css";
@import "vendor/pretty-checkbox.min.css";

:root {
    --accent: rgb(255,222,0);
    --dark: #000000;
    --background: #FFFFFF;
    --red: #fd5a5a;
}

.row {
    margin-left: 0; /* Bootstrap met de la margin negative par défaut */
    margin-right: 0;
}

@font-face {
    font-family: 'RobotoRegular';
    src: url("fonts/Roboto/Roboto-Regular.woff");
}

@font-face {
    font-family: 'RobotoBold';
    src: url("fonts/Roboto/Roboto-Bold.woff");
}

@font-face {
    font-family: 'Starjedi';
    src: url("fonts/starjedi/StarJedi.woff");
}

#circle {
    position: fixed;
    bottom: -300px;
    left: -300px;
    height: 500px;
    width: 600px;
    z-index: -100;
    background-color: var(--accent);
    background-color: var(--dark);
    border: 20px solid var(--accent);
    border-radius: 50%;
}

#circleSmall {
    position: fixed;
    bottom: -150px;
    left: 100px;
    height: 250px;
    width: 300px;
    z-index: -100;
    background-color: var(--accent);
    background-color: var(--dark);
    border: 20px solid var(--accent);
    border-radius: 50%;
}

#circleSmallRight {
    position: fixed;
    top: -200px;
    right: -100px;
    height: 300px;
    z-index: -100;
    width: 300px;
    background-color: var(--dark);
    border: 20px solid var(--accent);
    border-radius: 50%;
}

/*Header*/
header {
    height: 92px;
    display: flex;
    padding: 32px;
    align-items: center;
    justify-content: space-between;
}

header nav {
    display: flex;
    align-items: center;
}

header h6 {
    margin-bottom: 0;
}

header nav ul {
    margin: 0;
}

header nav .logo, header .profile-pic {
    width: 84px;
    height: 80px;
}

header .profile-pic img {
    object-fit: cover;
}

header nav .logo {
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 32px;
    text-align: center;
    line-height: 1;
    font-family: 'StarJedi', sans-serif;
    color: var(--dark);
    text-decoration: none;
}

header nav .logo:hover {
    cursor: pointer;
}

header .profile-pic {
    height: 60px;
    width: 60px;
}

header .profile-pic img, header nav .logo img {
    height: 100%;
    width: 100%;
    border-radius: 50%;
}

header .menu-items li {
    list-style-type: none;
    padding: 20px
}

header .menu-items li a {
    color: black;
    text-decoration: none;
}

header .menu-items li a:hover {
    color: black;
    text-decoration: underline;
}

#bell:hover, #disconnect:hover {
    cursor: pointer;
}

header .disconnect {
    display: flex;
    align-items: center;
}

header .disconnect button {
    border: none;
    background-color: var(--background);
}

header .header-right i {
    transition: all 0.15s ease-in-out;
}

header .disconnect i:hover {
    color: var(--red);
}

/*ScoreBoard*/
#scoreBoard {
    position: relative;
    max-width: 75vw;
}

.title {
    position: relative;
    max-width: 75vw;
}

.rebel-sith {
    position: absolute;
    top: -135%;
}

.rebel-sith > img {
    width: 15%;
}

.score-bar {
    background: black;
    justify-content: flex-start;
    border-radius: 50px;
    align-items: center;
    position: relative;
    padding: 0 5px;
    display: flex;
    height: 40px;
    width: 500px;
}

.score-value-left {
    position: absolute;
    right: 0;
    box-shadow: 0 10px 40px -10px #000;
    border-radius: 100px;
    background: #ff0000;
    height: 30px;
}

.score-value-right {
    position: absolute;
    left: 0;
    box-shadow: 0 10px 40px -10px #000;
    border-radius: 100px;
    background: #0000ff;
    height: 30px;
}

.score-points {
    position: absolute;
    width: 100%;
    top: 50px;
}

/*notifications*/
.notification {
    font-size: small;
    background-color: rgba(243, 243, 243, 0.5);
    border-radius: 5px;
}


.menu-items > li{
    font-family: 'Starjedi', sans-serif;
    color: var(--dark);
}

.menu-items > li {
    font-family: 'RobotoBold', sans-serif;
    color: var(--dark);
}

body {
    font-size: 1.1rem;
    font-family: 'RobotoBold', sans-serif;
}

.leftImg {
    position: relative;
    left: 120px;
    width: 125%;
}

.btn-yellow {
    background-color: var(--accent);
}

.main-container {
    margin: auto;
    width: 75%;
}

.main-container [class*="col-"] {
    padding: 0;
}

.student-list {
    background-color: white;
    border: 2px solid black;
    box-shadow: 5px 10px 8px #888888;
}

.student-row {
    border-bottom: 2px solid #e1e1e1;
}

.student-row .col-1 {
    margin: auto;
    text-align: center;
}

.student-row-element, .student-header-element {
    margin: 1em;
}

.student-row:nth-child(even) {background: #f6f6f6}
.student-row:nth-child(odd) {background: #FFFFFF}

.heading-row {
    border-bottom: 2px solid #e1e1e1;
}

.background {
    background: linear-gradient( rgba(255, 198, 94, 0.5), rgba(0, 0, 0, 0.5)), url('images/xwing_bg.jpg') no-repeat;
    background-size: cover;
}

.form-page {
    height: 100vh;
    width: 100vw;
}

.form-container {
    margin-top: 10%;
}

.login-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-direction: column;
}

.login-form {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    padding: 0px 5% 28px;
}

.login-logo {
    height: 150px;
    width: 150px;
}

.login-form input:focus {
    border-color: black;
    box-shadow: none;
}

.login-form input::after {
    content:'1';
    display:block;
    border:2px solid #000;
}

.login-form #da {
    background-image: url("images/user_icon.png");
}

.login-form #password {
    background-image: url("images/padlock.png");
    margin-bottom: 0px !important;
}

.login-form #da, .login-form #password {
    background-repeat: no-repeat;
    background-size: 20px;
    background-position: 10px 8px;
    padding-left: 40px;
}

.image-container {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    flex-direction: column;
}

.image-container img {
    object-fit: contain;
    width: 70%;
}

.login-container {
    height: 100vh;
}

.vertical-center {
    margin: 0;
    position: absolute;
    top: 50%;
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
}

@media only screen and (max-width: 800px) {
    .image-container {
        display: none;
    }

    .login-container {
        flex: none;
        max-width: 100vw !important;
        width: 100vw;
    }

    .form-page #footer {
        align-self: flex-end;
    }
}
/* endregion */

